--- a/wp-content/themes/cae/assets/scss/partials/_home.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_home.scss
@@ -234,6 +234,9 @@
 		@media (min-width:$screen-sm-min) {
 			width:33.333%;
 			width:calc(100% / 3);
+			.no-cssreflections & {
+				width:calc(100% / 3.01);
+			}
 		}
 		
 		position: relative;
